# whest-starterkit

./: .gitignore  .whestignore  AGENTS.md  AUTORESEARCH.md  BACKLOG.md  CLAUDE.md  README.md  candidate_claude.py  candidate_claude_lead.py  candidate_gpt.py  champion.json  estimator.py  local_engine.py  pyproject.toml
assets/: demo.cast
autoresearch/: config.json
autoresearch-config/: config.json
autoresearch-config/profiles/: whest-deep.config.toml  whest-lead.config.toml  whest-recovery.config.toml  whest-worker.config.toml
autoresearch-config/prompts/: deep.md  recovery.md  worker.md
autoresearch/prompts/: lead.md
docs/: README.md  RELEASING.md
docs/advanced/: README.md  profile-simulation.md  use-whestbench-explorer.md
docs/concepts/: README.md  ground-truth.md  problem-setup.md  scoring-model.md
docs/getting-started/: README.md  stage-1-standalone.md  stage-2-validate.md  stage-3-run-local.md  stage-4-run-subprocess.md  stage-5-package.md  stage-5-run-docker.md  stage-6-package.md
examples/: 01_random.py  02_mean_propagation.py  03_covariance_propagation.py  04_combined.py  04_shipped_weights.py  README.md
experiments/: active_subspace_quadrature_depth32.ipynb  b35_measure_gpt.py  b36_feasibility_gpt.py  b39_feasibility_gpt.py  b41_feasibility_gpt.py  covariance_spectrum_depth32.ipynb  log-claude-lead.md  log-claude.md  log-gpt.md
scripts/: autoresearch.ps1  install-autoresearch-task.ps1  manage-autoresearch.ps1  uninstall-autoresearch-task.ps1
tests/: test_local_engine.py  test_local_engine_parity.py  test_readme_commands.py
(+173 files in other folders)
