[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whest-starterkit"
version = "0.1.0"
description = "Starter kit for the ARC Whitebox Estimation Challenge"
requires-python = ">=3.10"
dependencies = [
    "whestbench @ git+https://github.com/AIcrowd/whestbench.git@629d6b9dc0528bf0ed62dd1c99c25545d1071aed",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
